To fix the current developer name not showing in matches cardTo list all the timezone in the meeting invitationTo add the timezone details in the calender To add the meeting invitation details to employer calander

--- a/frontend/src/app/modules/features/user/calendar/calendar.component.css
+++ b/frontend/src/app/modules/features/user/calendar/calendar.component.css
@@ -154,6 +154,3 @@
 .e-month-view .e-appointment{
 	width:157px !important;
 }
-.e-quick-popup-wrapper .e-event-popup .e-date-time{
-	display:none !important;
-}
